2006-12-19  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/libbonoboui-2.0.pc.in: Move ORBit2 and libxml2
	to Requires.private. Samuel Thibault. Closes bug #352191.

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-canvas-item.c:
	* bonobo/bonobo-control-frame.c:
	* bonobo/bonobo-control.c:
	* bonobo/bonobo-plug.c:
	Make it build with the Quartz backend. Patch from Min Sik Kim
	Closes bug #382692.

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-dock-layout.c: (bonobo_dock_layout_create_string):
	Guard against NULL to avoid crashes on Win32 at least. Patch from
	Andreas Köhler. Closes bug #379365.

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-ui-toolbar-popup-item.c: (set_arrow_orientation),
	(impl_set_orientation), (bonobo_ui_toolbar_popup_item_class_init),
	(bonobo_ui_toolbar_popup_item_construct): Use GtkArrow to draw
	the arrows instead of hardcoding them internally. Patch from
	Diego Escalante Urrelo. Closes bug #162312.

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-control.c:
	* bonobo/bonobo-selector-widget.c: (bonobo_selector_widget_init):
	* bonobo/bonobo-ui-private.h:
	* bonobo/bonobo-ui-sync-toolbar.c:
	(impl_bonobo_ui_sync_toolbar_state):
	* samples/compound-doc/bonobo-hello/hello-view.c: (view_new):
	* tools/browser/component-details.c: (component_details_init),
	(component_details_get_info):
	A bunch of cleanups:
	- Don't use C++ type comments
	- Pass NULL to gtk_label_new() to save some work.

2006-12-10  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* bonobo/bonobo-ui-init-gtk.c: Add missing #include <popt.h>.

2006-12-10  P. Henrique Silva  <ph.silva@gmail.com>

	reviewed by: Gustavo Carneiro

	* bonobo/bonobo-canvas-item.c (gbi_update, gbi_realize),
	(gbi_unrealize, gbi_finalize, bonobo_canvas_item_init):
	* bonobo/bonobo-dock-band.c (bonobo_dock_band_init),
	(bonobo_dock_band_map, bonobo_dock_band_unmap),
	(bonobo_dock_band_finalize):